# armonikfilters

./: .gitignore  CMakeLists.txt  Config.cmake.in  build-env.dockerfile  experimental.cpp  experimental.h  restart-build-env.sh
armonik/api/experimental/: experimental.h
test/: CMakeLists.txt  main.cpp
